--- a/Sucusstore-llanos/css/styles.css
+++ b/Sucusstore-llanos/css/styles.css
@@ -7,6 +7,9 @@
 html{
 	font-size: 62.5%;
 }
+body{
+	background-color: #f5f5f5;
+}
 #bodyIndex{
 	display: grid;
 	overflow-x: hidden;
@@ -34,38 +37,6 @@ html{
 #formFix{
 	font-size: 1.5rem;
 }
-/*.nav{
-	
-	background-color: #37FFC1;
-	
-	top: 0;
-	font-size: 2rem;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-
-}
-	.nav ul{
-			width: auto;
-			height: auto;
-			list-style: none; 
-			display: flex;
-			flex-flow: row wrap;
-			align-items: center;
-
-
-		}
-								.nav ul li a{
-										text-decoration: none;
-										font-family: 'Zen Maru Gothic', sans-serif;
-										font-size: 2rem;
-										color: #730202;
-										display: inline-block;
-										margin: 0 10px;
-										position: right center;
-
-
-									}*/
 .sign{
 	grid-area: sign;
 }
@@ -116,7 +87,7 @@ html{
 .footer{
 	grid-area: pie;
 	width: 100%;
-	height: 150px;
+	height: 180px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -331,6 +302,20 @@ html{
 	background-color: #EEB8FF;
 
 }
+.cardFlex{
+	padding: 1rem;
+	width: 100%;
+	height: auto;
+	display: flex;
+	flex-flow: row wrap;
+	align-items: stretch;
+	justify-content: space-evenly;
+	gap: 2rem;
+}
+.card{
+	width: 20%;
+	height: auto;
+}
 /*estilos de CUENTA*/
 #accountBody{
 	display: grid;
@@ -341,7 +326,7 @@ html{
 	"form1 			form2"
 	"pie 			pie";
 	min-height: 100vh;
-	grid-template-rows: auto auto auto auto;
+	grid-template-rows: auto auto 330px auto;
 	grid-template-columns: 50vw 50vw;
 
 }
@@ -354,8 +339,32 @@ html{
 #form1{
 	grid-area: form1;
 }
+#form1 .form-control{
+		font-size: 1.5rem;
+		width: 92%;
+}
+#form1 input, select{
+	margin: 1rem;
+}
 #form2{
+	box-sizing: border-box;
 	grid-area: form2;
+}
+#form2 .form-control{
+		font-size: 1.5rem;
+		width: 95%;
+}
+.btn-primary{
+	background-color: #CACACA;
+	border-color: #CACACA;
+	
+}
+.btn:hover{
+	background-color: #A9A7B0;
+	border-color: #BFBFBF;
+}
+.form-control:hover{
+	border-color: #A9A7B0;
 }
 /*CUENTA MD SIZE*/
 @media (max-width: 800px){
@@ -371,19 +380,6 @@ html{
 	
 	}
 }
-/*.accountFlex{
-	display: flex;
-	flex-flow: column nowrap;
-}
-#AcForms{
-	display: flex;
-    flex-direction: row;
-    align-content: flex-end;
-    align-items: stretch;
-    justify-content: center;
-    flex-wrap: nowrap;
-}*/
-
 /*alineaciones de textos*/
 .textRight{
 	text-align: right;
